--- a/views/backend/header.ejs
+++ b/views/backend/header.ejs
@@ -2,7 +2,13 @@
 <html>
   <head>
   	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="...">
+	<meta name="author" content="Aitch Chung">
+	<meta name="keyword" content="ASD">
+	<link rel="shortcut icon" href="img/favicon.png">
+
     <title><%= 'ASD::Backend' %></title>
   </head>
 
