Added AdminLTTE styles.

--- a/views/backend/footer.ejs
+++ b/views/backend/footer.ejs
@@ -1,8 +1,11 @@
-		<router-view></router-view>
-  	</div>
-  </body>
-  
-  <script type="text/javascript" src="/javascripts/bundle.js?v=1.1"></script>
+			<router-view></router-view>
+		</div>
+	</body>
+
+	<script src="/javascripts/jquery.min.js"></script>
+	<script src="/javascripts/bootstrap.min.js"></script>
+	<script src="/javascripts/app.min.js"></script>
+	<script src="/javascripts/bundle.js?v=1.1"></script>
 
 </html>
 
