--- a/views/backend/header.ejs
+++ b/views/backend/header.ejs
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="...">
-	<meta name="author" content="Aitch Chung">
-	<meta name="keyword" content="ASD">
-	<link rel="shortcut icon" href="img/favicon.png">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+		<meta name="description" content="<%= config.backend.description %>">
+		<meta name="author" content="<%= config.author %>">
+		<meta name="keyword" content="<%= config.backend.keyword %>">
 
-    <title><%= 'ASD::Backend' %></title>
-  </head>
+		<title><%= config.backend.title %></title>
 
-  <body>
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+		<link rel="stylesheet" href="/stylesheets/ionicons.min.css">
 
-  	<div id="app">
+		<!-- Theme style -->
+		<link rel="stylesheet" href="/stylesheets/AdminLTE.min.css">
+
+		<!-- Skin -->
+		<link rel="stylesheet" href="/stylesheets/skins/skin-blue.min.css">
+
+		<!-- Icons -->
+		<link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
+
+	</head>
+
+	<body class="hold-transition skin-blue sidebar-mini">
+
+		<div id="app" class="wrapper">
 
 <% /* EO horsehide/header.ejs */ %>
