Added Dashboard and User Login/Logout functions

--- a/views/backend/header.ejs
+++ b/views/backend/header.ejs
@@ -23,10 +23,13 @@
 		<!-- Icons -->
 		<link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
 
+		<!-- Toastr -->
+		<link href="/stylesheets/toastr.min.css" rel="stylesheet">
+
 	</head>
 
-	<body class="hold-transition skin-blue sidebar-mini">
+	<body>
 
-		<div id="app" class="wrapper">
+		<div id="app">
 
 <% /* EO horsehide/header.ejs */ %>
