--- a/views/backend/header.ejs
+++ b/views/backend/header.ejs
@@ -26,6 +26,9 @@
 		<!-- Toastr -->
 		<link href="/stylesheets/toastr.min.css" rel="stylesheet">
 
+		<!-- jQuery DataTable Bootstrap -->
+		<link href="/stylesheets/jquery.bootgrid.min.css" rel="stylesheet">
+
 	</head>
 
 	<body>
