--- a/views/backend/footer.ejs
+++ b/views/backend/footer.ejs
@@ -3,6 +3,7 @@
 	</body>
 
 	<script src="/javascripts/jquery.min.js"></script>
+	<script src="/javascripts/jquery.bootgrid.min.js"></script>
 	<script src="/javascripts/bootstrap.min.js"></script>
 	<script src="/javascripts/app.min.js"></script>
 	<script src="/javascripts/bundle.js?v=1.1"></script>
