Add CRUD for Article

--- a/views/backend/header.ejs
+++ b/views/backend/header.ejs
@@ -14,12 +14,6 @@
 		<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 		<link rel="stylesheet" href="/stylesheets/ionicons.min.css">
 
-		<!-- Theme style -->
-		<link rel="stylesheet" href="/stylesheets/AdminLTE.min.css">
-
-		<!-- Skin -->
-		<link rel="stylesheet" href="/stylesheets/skins/skin-blue.min.css">
-
 		<!-- Icons -->
 		<link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
 
@@ -28,6 +22,24 @@
 
 		<!-- jQuery DataTable Bootstrap -->
 		<link href="/stylesheets/jquery.bootgrid.min.css" rel="stylesheet">
+
+		<!-- Summernote -->
+		<link href="/stylesheets/summernote.css" rel="stylesheet">
+
+		<!-- iCheck flat skin, Green -->
+		<link href="/stylesheets/flat/green.css" rel="stylesheet">
+
+		<!-- Select2 -->
+		<link href="/stylesheets/select2.min.css" rel="stylesheet">
+
+		<!-- DateTime -->
+		<link href="/stylesheets/bootstrap-datetimepicker.min.css" rel="stylesheet">
+
+		<!-- Theme style -->
+		<link rel="stylesheet" href="/stylesheets/AdminLTE.min.css">
+
+		<!-- Skin -->
+		<link rel="stylesheet" href="/stylesheets/skins/skin-blue.min.css">
 
 	</head>
 
