--- a/views/backend/footer.ejs
+++ b/views/backend/footer.ejs
@@ -5,6 +5,10 @@
 	<script src="/javascripts/jquery.min.js"></script>
 	<script src="/javascripts/jquery.bootgrid.min.js"></script>
 	<script src="/javascripts/bootstrap.min.js"></script>
+	<script src="/javascripts/summernote.min.js"></script>
+	<script src="/javascripts/icheck.min.js"></script>
+	<script src="/javascripts/select2.min.js"></script>
+	<script src="/javascripts/bootstrap-datetimepicker.min.js"></script>
 	<script src="/javascripts/app.min.js"></script>
 	<script src="/javascripts/bundle.js?v=1.1"></script>
 
