Changed the HOME link.

--- a/views/rotary/header.ejs
+++ b/views/rotary/header.ejs
@@ -53,7 +53,7 @@
                   <span class="icon-bar"></span>
               </button>
 
-              <a class="navbar-brand" href="#body">
+              <a class="navbar-brand" href="/">
                   <img class="default-logo" src="/rotary/rotary-logo.png" alt="Logo">
                   <img class="shrink-logo" src="/rotary/rotary-logo.png" alt="Logo">
               </a>
