--- a/views/rotary/index.ejs
+++ b/views/rotary/index.ejs
@@ -19,7 +19,7 @@
 			                    <div class="money-type-1"><em>By</em> <strong><%= article.created.substr(0, 16); %></strong></div>
 			                </div>
 			                <p class="g-color-white--dark g-mb-45"><%= article.abstract; %>...</p>
-			                <a class="btn-u btn-u-lg btn-u-upper" href="/articles/read/<%= article.id; %>">Learn more</a>
+			                <a class="btn-u btn-u-lg btn-u-upper" href="/articles/read/<%= article.id; %>">Read more</a>
 			            </div>
 			        </div>
 			    </div>
@@ -62,7 +62,7 @@
 			                            <em class="project-item__time"><%= article.created.substr(0, 16); %></em>
 			                        </div>
 			                        <div class="project-item-content-col3">
-			                            <a class="btn-u btn-u-lg btn-u-upper" href="/articles/read/<%= article.id; %>">Learn more</a>
+			                            <a class="btn-u btn-u-lg btn-u-upper" href="/articles/read/<%= article.id; %>">Read more</a>
 			                        </div>
 			                    </div>
 			                </div>
