--- a/views/rotary/article_read.ejs
+++ b/views/rotary/article_read.ejs
@@ -1,6 +1,11 @@
 <% include header %>
 
 <style type="text/css">
+
+.charity-header.one-page-header.navbar {
+    background-color: #e7e7e7 !important;
+}
+
 .navbar-default {
     background-color: #f8f8f8;
     border-color: #e7e7e7;
