--- a/views/horseclub/category_index.ejs
+++ b/views/horseclub/category_index.ejs
@@ -2,13 +2,16 @@
 
 <style type="text/css">
 .charity-header.one-page-header.navbar {
-    background-color: #e7e7e7 !important;
+    background-color: #555 !important;
+}
+.charity-header.one-page-header.top-nav-collapse a{
+    color: #FFF !important;
 }
 </style>
 
 <% if( cate_articles !== undefined && cate_articles.length ) { //if-#2 %>
 
-	<section class="g-pt-100 g-pb-100 text-center" id="your-help">
+	<section class="g-pt-150 g-pb-100 text-center" id="your-help">
 	    <div class="container">
 	        <div class="g-heading-v13 text-center g-max-width--770 g-margin-side-auto g-mb-60">
 	            <h2 class="g-mb-35">
